--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: پی‌نوشت
 email: mo.pooya@gmail.com
 author: پویا
 description: "درباره‌ی وب، تکنولوژی، ایده، استارت‌آپ‌ها و سایر مسائل مورد علاقه‌ام می‌نویسم."
-baseurl: "/fa"
+baseurl: "/fa/"
 url: "http://py4.github.io"
 google_analytics: 	
 
