--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email: mo.pooya@gmail.com
 author: پویا
 description: "درباره‌ی وب، تکنولوژی، ایده، استارت‌آپ‌ها و سایر مسائل مورد علاقه‌ام می‌نویسم."
 baseurl: "/fa"
-url: "http://py4.github.io"
+url: "http://py4.ir"
 google_analytics: 	
 
 # Build settings
